# CS219_Gpufit_ACC

./: README.md
Gpufit-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Gpufit_Cpufit_Nvidia_Profiler_Test  Gpufit_Cpufit_Performance_Comparison  Makefile  cmake_install.cmake  mp_solver  mp_solver_example  mp_solver_example_timed
Gpufit-build/Cpufit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Cpufit/matlab/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Cpufit/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Gpufit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Gpufit/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Gpufit/java/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Gpufit/matlab/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/Gpufit/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Gpufit-build/pyCpufit/pyCpufit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Gpufit-build/pyGpufit/pyGpufit.egg-info/: PKG-INFO  SOURCES.txt
Gpufit/Gpufit/: CMakeLists.txt  constants.h  gpu_data.cu
Gpufit/Gpufit/estimators/: estimators.cuh  lse_complex.cuh  modified_lse.cuh
Gpufit/Gpufit/models/: channel_eq.cuh  models.cuh
Gpufit/examples/c++/: CMakeLists.txt  (+2 more)
Gpufit/examples/c++/myProject/: CMakeLists.txt  Linear_Regression_Example.cpp  csv_reader.h  mp_solver.cpp  mp_solver.h  mp_solver_example.cpp  mp_solver_example_timed.cpp  sample_input.csv  sample_input_test.csv
(+3 files in other folders)
